[package]
name = "mst_kruskal_variants"
version = "0.1.0"
edition = "2024"
description = "Implementation of Kruskal's algorithm variants."
license = "MIT"
keywords = ["graph", "mst", "kruskal", "algorithm"]

[lib]
path = "src/lib.rs"

[dependencies]
rand = "0.10.0-rc.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark" 
harness = false       
